# zeitgeist-blog-projects

./: .gitignore  .pre-commit-config.yaml
geopolitical_proximity/: pyproject.toml  requirements.txt  settings.py
geopolitical_proximity/bq/: bq_datasets.py  bq_tables.py  bq_types.py
geopolitical_proximity/notebooks/nodes/: boundaries.ipynb  names.ipynb
geopolitical_proximity/notebooks/nodes/vars/culture/: 02_democracy.ipynb
geopolitical_proximity/notebooks/nodes/vars/resources/: 01_human_capital.ipynb  02_econ_compet.ipynb  03_military_power.ipynb
geopolitical_proximity/utils/: apis.py  impute.py  tools.py  world_bank.py
geopolitical_proximity/utils/tools/: impute.py  world_bank.py
political_fragmentation/: README.md  pyproject.toml  requirements.txt  utils.py
political_fragmentation/countries/: france.ipynb  uk.ipynb  ukraine.ipynb  usa.ipynb
words_deeds/: 1_words_index.ipynb  2_merge_with_vdem.ipynb  pyproject.toml  utils.py
words_deeds/types/: democracy_indices.py  indicators.py
words_deeds/utils/: democracy_indices.py  indicators.py  types.py
years_similarity/: README.md  pyproject.toml
