[tool.poetry]
name = "geopolitical-proximity"
version = "0.1.0"
description = ""
authors = ["m-quick <martinquick7@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
numpy = "^2.1.1"
seaborn = "^0.13.2"
matplotlib = "^3.9.2"
jupyter = "^1.1.1"
ipykernel = "^6.29.5"
google-cloud-bigquery = "^3.25.0"
python-dotenv = "^1.0.1"
db-dtypes = "^1.3.0"
requests = "^2.32.3"
shapely = "^2.0.6"
lxml = "^5.3.0"
geopandas = "^1.0.1"
scikit-learn = "^1.5.2"
pre-commit = "3.8.0"
types-requests = "^2.32.0.20240914"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
